# Game-of-Life

./: CMakeLists.txt  README.md
audio/: LICENSE
headers/: IApplication.hpp  LifeGame.hpp  Shader.hpp
shaders/: FullscreenTriangle.frag  FullscreenTriangle.vert  Grid.frag  Grid.vert
src/: IApplication.cpp  LifeGame.cpp  Shader.cpp  main.cpp
